[package]
name = "vanity-sniper"
version = "1.0.0"
edition = "2021"
description = "Discord vanity URL sniper (Rust)"

[[bin]]
name = "vanity-sniper"
path = "main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
